# rust-backend-journey

./: .gitignore  Cargo.toml  README.md
learning/: SKILLS.md  TODO.md
learning/axum/basics/: get.md  init.md  post.md  query.md
migrations/: 20260413052054_create_tasks.down.sql  20260413052054_create_tasks.up.sql  20260415024612_chat_message.down.sql  20260415024612_chat_message.up.sql
src/: lib.rs  main.rs
src/axum_basic/: chat_repo.rs  handler.rs  mod.rs  model.rs  router.rs
tests/: chat_repo_test.rs  helper.rs  tasks.rs
