[package]
name = "backends"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart", "macros","ws"] }
tokio = { version = "1.52.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros","chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
tower-http = { version = "0.6.8", features = ["trace"] }
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
serde_json = "1.0.149"
anyhow = "1.0.102"
